--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -33,6 +33,13 @@ RUN pecl install redis && docker-php-ext-enable redis
 # Install composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
+# Add user for laravel application
+RUN groupadd -g 1000 www
+RUN useradd -u 1000 -ms /bin/bash -g www www
+
+# Change current user to www
+USER www
+
 # Expose port 9000 and start php-fpm server
 EXPOSE 9000
 
