--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - APP_NAME=XMQuote
       - APP_ENV=local
       - APP_KEY=base64:vCNx/6gpVsHaJMc8YxPTuirLFUWLx1bbdmZVlqQaBGU=
-      - APP_DEBUG=false
+      - APP_DEBUG=true
       - LOG_CHANNEL=stack
       - DB_CONNECTION=mysql
       - DB_HOST=db
